2006-10-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: remove a shadow declaration to avoid compiler
	warnings. #362475

2006-10-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in: added a '--rebuild-sections' option that will
	automatically recreate the MODULE-sections.txt file each time.
	(This only works for projects with very neat header files.) #310494.

2006-10-15  Damon Chaplin  <damon@gnome.org>

	Bug #338517: Automatically creating/updating .types file:
	
	* gtkdoc-scan.in: added a '--rebuild-types' option which will
	automatically update the .types file using all _get_type() functions
	found in the headers. (It will also do this if no .types file is found,
	i.e. when gtk-doc is first run on a project.)

	* gtk-doc.make (scan-build.stamp): run gtkdoc-scan before
	gtkdoc-scangobj so we can use the generated .types file.

	* gtkdoc-scangobj.in: if the .types file doesn't have any #include
	directives, just output "extern GType *get_type();" declarations for
	each *_get_type() function.

2006-10-14  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ExpandAbbreviationsExceptCDATA): new function used
	to expand abbreviations in extra files, but leaving CDATA sections
	as they are. (#360579)

2006-10-14  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputSGML): Allow the section id to be set from
	within the source code "SECTION:" comment block. (#349855)

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* style.css: added missing comma from previous fix (#360967).

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputSymbolTraits): new function to output the
	"Since" and "Stability Level:" paragraphs, with roles to allow
	XSLT styling. (#348046)

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: support interfaces on non-GObject types.
	(#348058, Josh Parsons).

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: make sure interfaces are initialized so the